# sigstack-bot

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/pacto-client/: Cargo.toml
crates/pacto-client/src/: agent.rs  client.rs  error.rs  lib.rs  types.rs
crates/pacto-client/tests/: agent_test.rs  client_test.rs
crates/poa-tools/: Cargo.toml
crates/poa-tools/src/: client.rs  common.rs  contract.rs  lib.rs  steward.rs  subgraph.rs  tools_gov.rs  tools_participate.rs  tools_read.rs  tools_write.rs  units.rs
crates/signal-bot/: Cargo.toml
crates/signal-bot/src/: bot_identity.rs  config.rs  error.rs  group_preferences_store.rs  group_translate_store.rs  lib.rs  main.rs  menu_language.rs  pacto_agent.rs  transcribe_store.rs  voice_attachment_cache.rs
crates/signal-bot/tests/: e2e_test.rs
crates/signal-client/src/: client.rs  error.rs  lib.rs  receiver.rs  types.rs
crates/tools/src/: confirm.rs  executor.rs  lib.rs  (+2 more)
crates/whisper-client/: Cargo.toml
crates/whisper-client/src/: client.rs  error.rs  lib.rs  types.rs
deploy/dstack-app-ctqs1/: docker-compose.yml  phala.env.example
docker/: Dockerfile  Dockerfile.pacto  Dockerfile.proxy  Dockerfile.relay  Dockerfile.whisper  docker-compose.yaml  pacto-bot-api.toml.example  phala-compose.yaml  relay-config.toml  whisper-entrypoint.sh
docs/: language-threads.md  poa-integration.md
docs/plans/: 2026-06-15-stripe-subscription-activation.md  2026-6-22-whisper-integration.md  base-plan-template.md
docs/spikes/: 2026-07-21-sidecar-groups.md  2026-6-23-phase0-whisper-spike.md
web/: pnpm-lock.yaml
(+26 files in other folders)
