[package]
name = "whisper-client"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["multipart", "json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
wiremock.workspace = true
